unboxing-istio-service-mesh/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v117
  labels:
    deploy: nginx
    version: "1.17"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      version: "1.17"
  template:
    metadata:
      labels:
        app: nginx
        version: "1.17"
        minor-version: "1.17.9"
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.9
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: echo-txt
          mountPath: /usr/share/nginx/html/echo
      volumes:
      - name: echo-txt
        configMap:
          name: nginx-static-files
          items:
          - key: echo.txt.v1.17
            path: test.txt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v116
  labels:
    deploy: nginx
    version: "1.16"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      version: "1.16"
  template:
    metadata:
      labels:
        app: nginx
        version: "1.16"
        minor-version: "1.16.1"
    spec:
      containers:
      - name: nginx
        image: nginx:1.16.1
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: echo-txt
          mountPath: /usr/share/nginx/html/echo
      volumes:
      - name: echo-txt
        configMap:
          name: nginx-static-files
          items:
          - key: echo.txt.v1.16
            path: test.txt
