unboxing-istio-service-mesh/nginx-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx-svc
  subsets:
  - name: v117
    labels:
      app: nginx
      version: "1.17"
  - name: v116
    labels:
      app: nginx
      version: "1.16"
