unboxing-istio-service-mesh/nginx-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - "nginx.hung.org.hk"
  gateways:
  - nginx-gateway  
  http:
  - route:
    - destination:
        host: nginx-svc
        subset: v117
      weight: 50
    - destination:
        host: nginx-svc
        subset: v116
      weight: 50
